# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: make-linter.yml
brain_games/: .cli.py.swp  __init__.py  cli.py  game_engine.py  game_even.py  game_interface.py
brain_games/games/: .game_calc.py.swp  .game_even.py.swp  __init__.py  calc.py  even.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: .brain_games.py.swp  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
