[tool.poetry]
packages = [
   { include = "brain_games" },
]
name = "hexlet-code"
version = "0.9.0"
description = ""
authors = ["andrew <isbushcar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.1.0"
update = "^0.0.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
