[tool.poetry]
packages = [
   { include = "brain_games" },
]
name = "hexlet-code"
version = "0.12.0"
description = "hexlet brain-games"
authors = ["andrew <isbushcar@gmail.com>"]
repository = "https://github.com/isbushcar/python-project-lvl1"

classifiers = [
	"Development Status :: 4 - Beta",
	"License :: Free For Home Use",
	"Programming Language :: Python :: 3",
	"Topic :: Games/Entertainment"
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.1.0"
update = "^0.0.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
